--- a/car/templates/base.html
+++ b/car/templates/base.html
@@ -4,16 +4,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static './static/base.css' %}">
     <title>{% block title %}CarMarket{% endblock %}</title>
-    {% block styles %}
+
+    <!-- Base CSS -->
+    <link rel="stylesheet" href="{% static 'base.css' %}">
+    <link rel="stylesheet" href="{% static 'footer.css' %}">
+
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
-          integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
-          crossorigin="anonymous"
-          referrerpolicy="no-referrer" />
-    {% endblock %}
+          integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-    {% block content %}{% endblock %}
+<header class="nav-bar">
+    <a href="{% url 'car:index' %}" class="site-title">
+        <h2>CarMarket.ge</h2>
+    </a>
+
+    <form id="search-form" role="search" method="get" action="{% url 'car:index' %}">
+        <label for="query" class="sr-only">Search</label>
+        <input type="search" id="query" name="q" placeholder="Search for cars..."
+               aria-label="Search through site content" value="{{ request.GET.q }}">
+        <button type="submit">Search</button>
+    </form>
+
+    <nav class="nav-links">
+        <a href="{% url 'car:car_add' %}" class="add-product" aria-label="Add a Product">
+            <i class="fa-solid fa-plus"></i>დამატება
+        </a>
+        {% if user.is_authenticated %}
+            <ul class="nav-item dropdown" style="margin-top: 15px">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                   aria-expanded="false">
+                    {{ user }}
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="{% url 'user:profile' %}">My Profile</a></li>
+                    <li>
+                        <form method="post" action="{% url 'user:logout' %}" style="display: inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="logout dropdown-item">
+                                <i class="fa-solid fa-sign-out"></i>Logout
+                            </button>
+                        </form>
+                    </li>
+                </ul>
+            </ul>
+        {% else %}
+            <a href="{% url 'login' %}" class="login" aria-label="Login">
+                <i class="fa-regular fa-user"></i>შესვლა
+            </a>
+        {% endif %}
+    </nav>
+</header>
+
+{% block content %}
+{% endblock %}
+{% include 'footer.html' %}
 </body>
 </html>
